--- a/tasks/persist-debian.yml
+++ b/tasks/persist-debian.yml
@@ -4,3 +4,10 @@
 
 - name: Copy v4 restore script
   template: src=restore.v4.j2 dest=/etc/network/if-pre-up.d/iptables-v4 owner=root group=root mode=755
+
+- name: Enable firewall rule to limit incoming ssh trafic
+  ufw:
+    rule: limit
+    port: ssh
+    proto: tcp
+    state: enabled
