--- a/tasks/persist-debian.yml
+++ b/tasks/persist-debian.yml
@@ -5,6 +5,11 @@
 - name: Copy v4 restore script
   template: src=restore.v4.j2 dest=/etc/network/if-pre-up.d/iptables-v4 owner=root group=root mode=755
 
+- name: ensure ufw is installed
+  apt:
+    name: ufw
+    state: latest
+
 - name: Drop incoming connections
   ufw:
     direction: incoming
